# perplexity-cli

./: .architecture-baseline.json  .coverage  .gitignore  .gitleaks.toml  .perplexity-auth.json  .pre-commit-config.yaml  .safety-project.ini  .semgrep-architecture.yml  .semgrep.yml  .semgrepignore  CONTRIBUTING.md  LICENSE  Makefile  QUALITY_GATES.md  README.md  SECURITY.md  devtools.sh  discover_api_endpoints.py  lefthook.yml  opencode.json  opencode.jsonc  perplexity_prompt.md  pyproject.toml  requirements.txt  test_attachment_validation.py  test_chrome_connection.py  test_token_with_api.py  threads-2026-02-15-165435.csv  threads-2026-02-15-165517.csv  vulture_whitelist.py
.claude/: CLAUDE.md  START_HERE.md  perplexity_prompt.md
.claude/plans/: ATTACHMENT_IMPLEMENTATION_PLAN.md
.claudeCode/: API_DISCOVERY.md  ARCHITECTURE.md  CLAUDE.md  CODE_QUALITY.md  PHASE2_SUMMARY.md  PHASE2_TEST_REPORT.md  PLAN.md  SECURITY_REVIEW.md  TESTING_GUIDE.md  WORKFLOW.md
.deepsec/: README.md  deepsec.config.ts
.deepsec/data/perplexity-cli/: INFO.md  SETUP.md
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish-to-pypi.yml  release-drafter.yml
.home/.config/perplexity-cli/: config.json  urls.json
.opencode/agents/: quality-plan-reviewer.md
.opencode/plans/: agent-cli-best-practices-plan.md  parallel-execution-plan.md
.opencode/plugins/: plan-compliance-gate.ts  pre-push-docs-check.ts  pxcli-quality.ts  quality-gate.ts
.scratch/: authenticate.py
docs/: CDP_RESEARCH_GUIDE.md  COMPLETION_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_RESEARCH_SUMMARY.md  FOLLOWUP_IMPLEMENTATION_ANALYSIS.md  FOLLOWUP_RESEARCH_COMPLETE.md  PLAN_STATUS.md  REMAINING_PLAN.md  RESEARCH_EXECUTION_PLAN.md  RESEARCH_FINDINGS.md  RESEARCH_FINDINGS_AND_PLAN.md  THREAD_CONTEXT_CACHE_EXPLANATION.md  api_discovery_results.json  followup_fix_plan.md  followup_research_1e8ef0ac.json  followup_test_results.json  implementation_plan.md  library_page_api_calls.json  list_collections_response.json  list_threads_response.json  our_followup_request.json  research_findings_summary.md  research_plan_thread_structure.md  thread_detail_endpoints.json  thread_inspection_1e8ef0ac.json  thread_inspection_1f344d10.json  thread_inspection_b4cf5f8d.json  thread_inspection_combined.json  thread_response_analysis.json  threads_api_research.md
quality/: gates.conf
quality/baselines/: file-size.json  pyright-strict.json  ruff-architecture.json  semgrep-architecture.json  suppressions.json
scripts/: _gates.py  _ratchet.py  agent_check.py  analyze_thread_response.py  check_architecture.py  check_coupling.py  check_file_size.py  check_module_coverage.py  check_plan_compliance.py  check_pyright_strict.py  check_ruff_architecture.py  check_semgrep_architecture.py  check_suppressions.py  compare_followup_requests.py  diagnose_followup_issue.py  discover_mutate_diff_files.py  discover_threads_api.py  generate_quality_plan.py  generate_sonar_reports.py  gitleaks_check.sh  inspect_followup_request.py  inspect_library_page.py  inspect_thread_page.py  research_followup_behavior.py  research_followup_issue.py  research_thread_detail_endpoint.py  research_thread_structure.py  smoke_test.sh  test_followup_fix.py  test_followup_query.py  test_library_endpoints.py  test_query_count_behavior.py  track_metrics.py  verify_followup_implementation.py  verify_wheel.py
src/perplexity_cli/: __init__.py  _types.py  cli.py  command_runner.py  commands.py  completion_commands.py  envelope.py  error_handler.py  exit_codes.py  help_json.py  mcp_server.py  ndjson.py  query_runner.py  query_streaming.py  session_log.py
src/perplexity_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/perplexity_cli/api/: __init__.py  client.py  contracts.py  discovery.py  endpoints.py  gitlab_client.py  models.py  rest_client.py  streaming.py
src/perplexity_cli/attachments/: __init__.py  upload_manager.py
src/perplexity_cli/auth/: .oauth_handler.py.swp  __init__.py  gitlab_token_manager.py  models.py  oauth_handler.py  token_manager.py  utils.py
src/perplexity_cli/commands/: __init__.py  _ctx.py  _examples.py  _help_refs.py  _help_sections.py  _runner_adapter.py  _schemas.py  auth_cmds.py  config_cmds.py  doctor_cmds.py  models_cmds.py  query_cmd.py  schema_cmd.py  skill_cmds.py  style_cmds.py  threads_cmds.py
src/perplexity_cli/config/: __init__.py  defaults.py  models.py  urls.json
src/perplexity_cli/formatting/: __init__.py  base.py  context.py  json.py  markdown.py  plain.py  registry.py  rich.py
src/perplexity_cli/models/: __init__.py  model_config.py
src/perplexity_cli/resources/: skill.md
src/perplexity_cli/runners/: __init__.py  _utils.py  auth.py  config.py  export.py  models.py  skill.py  status.py
src/perplexity_cli/services/: __init__.py  model_service.py
src/perplexity_cli/threads/: __init__.py  cache_manager.py  date_parser.py  exporter.py  models.py  scraper.py  utils.py
src/perplexity_cli/utils/: async_bridge.py  attachment_models.py  config.py  cookies.py  encryption.py  exceptions.py  file_handler.py  file_permissions.py  http_errors.py  retry.py  (+10 more)
tests/: __init__.py  _fuzz_harnesses.py  conftest.py  discover_api_endpoints.py  discover_query_api.py  run_integration_tests.sh  run_integratons_tests.sh  save_auth_token.py  strategies.py  test_api_client.py  test_api_integration.py  test_api_models_types.py  test_api_version.py  test_async_bridge.py  test_attachment_request_serialization.py  test_attachment_validation.py  test_attachments_integration.py  test_auth.py  test_auth_integration.py  test_auth_models.py  test_auth_runner.py  test_auth_utils.py  test_chrome_connection.py  test_cli.py  test_cli_composition.py  test_command_runner.py  test_command_tree.py  test_commands_package_layout.py  test_completion.py  test_comprehensive_help.py  test_config_edge_cases.py  test_config_improvements.py  test_config_models.py  test_config_runners.py  test_cookie_utils.py  test_coupling_metrics.py  test_coverage_gaps.py  test_cyclomatic_complexity.py  test_date_parser.py  test_deep_research_edge_cases.py  (+86 more)
(+9 files in other folders)
