[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pxcli"
version = "0.4.4"
description = "CLI for Perplexity.ai with persistent authentication, encrypted tokens, streaming responses, multiple output formats, source references, thread export with date filtering, configurable URLs, logging, and automatic retry logic"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Jamie Mills", email = "jamie.mills@gmail.com"},
]
keywords = ["cli", "perplexity", "ai", "query", "command-line"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "httpx>=0.25",
    "websockets>=12.0",
    "rich>=13.0",
    "tenacity>=8.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/jamiemills/perplexity-cli"
Repository = "https://github.com/jamiemills/perplexity-cli"
"Bug Tracker" = "https://github.com/jamiemills/perplexity-cli/issues"
"Source Code" = "https://github.com/jamiemills/perplexity-cli"

[project.scripts]
pxcli = "perplexity_cli.cli:main"
perplexity-cli = "perplexity_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-data]
perplexity_cli = ["resources/skill.md"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "slow: marks tests as slow-running",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::RuntimeWarning:.*coroutine.*authenticate_with_browser.*was never awaited",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert_used (required for pytest)
    "B110",  # try_except_pass (acceptable error handling pattern)
    "B310",  # urllib_urlopen (false positive on requests library)
]
