[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pxcli"
version = "0.7.0"
description = "CLI for Perplexity.ai with persistent authentication, encrypted tokens, streaming responses, multiple output formats, source references, thread export with date filtering, configurable URLs, logging, and automatic retry logic"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Jamie Mills", email = "jamie.mills@gmail.com"},
]
keywords = ["cli", "perplexity", "ai", "query", "command-line"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "cryptography>=46.0.5",
    "curl-cffi>=0.14.0",
    "httpx>=0.25",
    "websockets>=12.0",
    "rich>=13.0",
    "tenacity>=8.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.1",
    "ty>=0.0.24",
    "lefthook>=2.1.6",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/jamiemills/perplexity-cli"
Repository = "https://github.com/jamiemills/perplexity-cli"
"Bug Tracker" = "https://github.com/jamiemills/perplexity-cli/issues"
"Source Code" = "https://github.com/jamiemills/perplexity-cli"

[project.scripts]
pxcli = "perplexity_cli.cli:main"
perplexity-cli = "perplexity_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-data]
perplexity_cli = ["resources/skill.md", "config/urls.json"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = '--strict-markers -v -m "not integration and not real_api and not manual and not real_user_config"'
markers = [
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "slow: marks tests as slow-running",
    "unit: marks tests as unit tests",
    "real_api: marks tests that call the real Perplexity API (skipped in CI)",
    "manual: marks tests that require interactive input (run with pytest -m manual -s)",
    "real_user_config: marks tests that intentionally use the real user config directory",
]
filterwarnings = [
    "ignore::RuntimeWarning:.*coroutine.*authenticate_with_browser.*was never awaited",
]

[tool.coverage.run]
source = ["perplexity_cli"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert_used (required for pytest)
    "B110",  # try_except_pass (acceptable error handling pattern)
    "B310",  # urllib_urlopen (false positive on requests library)
]
