[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pxcli"
version = "0.7.1"
description = "CLI for Perplexity.ai with persistent authentication, encrypted tokens, streaming responses, multiple output formats, source references, thread export with date filtering, configurable URLs, logging, and automatic retry logic"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Jamie Mills", email = "jamie.mills@gmail.com"},
]
keywords = ["cli", "perplexity", "ai", "query", "command-line"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "cryptography>=46.0.7",
    "curl-cffi>=0.15.0",
    "httpx>=0.25",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "rich>=13.0",
    "tenacity>=8.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.1",
    "ty>=0.0.24",
    "lefthook>=2.1.6",
    "bandit>=1.7.7",
    "vulture>=2.14",
]

[project.urls]
Homepage = "https://github.com/jamiemills/perplexity-cli"
Repository = "https://github.com/jamiemills/perplexity-cli"
"Bug Tracker" = "https://github.com/jamiemills/perplexity-cli/issues"
"Source Code" = "https://github.com/jamiemills/perplexity-cli"

[project.scripts]
pxcli = "perplexity_cli.cli:main"
perplexity-cli = "perplexity_cli.cli:main"
pxcli-mcp = "perplexity_cli.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-data]
perplexity_cli = ["resources/skill.md", "config/urls.json"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C4",    # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "D",     # pydocstyle
    "S101",  # flake8-bandit: assert in production code
    "T10",   # flake8-debugger: breakpoint(), pdb.set_trace(), etc.
    "RUF",   # ruff-specific rules (incl. RUF012 mutable class attributes)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "D105",  # missing docstring in magic method (self-documenting)
    "D107",  # missing docstring in __init__ (covered by class docstring per Google convention)
    "D301",  # raw docstrings -- Click uses \b (backspace) as a formatting directive;
             # r-strings would break all CLI help output
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]  # tests: no docstrings required, asserts permitted
"vulture_whitelist.py" = ["B018", "D", "F821"]  # whitelist: useless expressions are intentional
"scripts/**/*.py" = ["D"]  # scripts: no docstrings required

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = '--strict-markers -v -m "not integration and not real_api and not manual and not real_user_config and not fuzz"'
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "slow: marks tests as slow-running",
    "real_api: marks tests that call the real Perplexity API (skipped in CI)",
    "manual: marks tests that require interactive input (run with pytest -m manual -s)",
    "real_user_config: marks tests that intentionally use the real user config directory",
    "fuzz: marks tests as atheris fuzz tests (cpu-intensive, ~2-3s each)",
]
[tool.coverage.run]
source = ["perplexity_cli"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.bandit]
exclude_dirs = ["tests"]
# No global skips -- all checks enabled at maximum strictness.
# Genuine false positives are suppressed inline with targeted
# '# nosec BXXX' comments that document the justification.

[tool.vulture]
paths = ["src/"]
exclude = []
min_confidence = 80

[tool.mutmut]
paths_to_mutate = ["src/perplexity_cli/"]
tests_dir = ["tests/"]
pytest_add_cli_args = ["--ignore=tests/test_cyclomatic_complexity.py", "--ignore=tests/test_test_isolation.py", "--ignore=tests/test_vulture_dead_code.py", "--ignore=tests/test_semgrep_clean_code.py", "--ignore=tests/test_coupling_metrics.py", "--ignore=tests/test_safety_scan.py", "--ignore=tests/test_mutate_diff_files.py", "--ignore=tests/test_plan_compliance.py", "--ignore=tests/test_quality_ratchets.py", "--ignore=tests/test_schema_drift.py", "--ignore=tests/test_repository_hygiene.py", "--ignore=tests/test_help_doc_drift.py"]
do_not_mutate = ["**/formatting/registry.py"]

[tool.pyright]
include = ["src/"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "pyright>=1.1",
    "radon>=6.0.1",
    "vulture>=2.16",
    "mutmut>=3.0",
    "hypothesis>=6.0",
    "pytest-xdist>=3.0",
]
